# buddai

./: Cargo.toml  README.md  install.sh
src/: deepseek.rs  env.rs  gemini.rs  main.rs
