[package]
name = "buddai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
reqwest = "0"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
